--- a/hospital_details.html
+++ b/hospital_details.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="https://necromyhan.github.io/medical-data-storage/style.css">
 <html>
 <head>
 <title>Hospital Details</title>
