--- a/hospital.html
+++ b/hospital.html
@@ -145,8 +145,8 @@
         }
         </script>
 
-       
-        <h2>Register Hospital</h2>
+       .h2 {font-family: "Times New Roman", Times, serif;}
+        <h2 class="h2">Register Hospital</h2>
     <form>
 		<table style="width:25%"> 
             <tr>
