--- a/hospital.html
+++ b/hospital.html
@@ -6,7 +6,7 @@
     <body>
 	<p><a href="doctor.html"><button type="submit" class="hidden" style='margin-right:16px'>Doctor Registration</button></a><a href="patient.html"><button type="submit" class="hidden" style='margin-right:16px'>Patient Registration</button></a><a href="patient_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Patient Details</button></a><a href="record_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Medical Record</button></a><a href="examine_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Patient Examine details</button></a></p>
       
-        <h1>Hospital Registration </h1>
+        <h1 style="font-family:verdana;">Hospital Registration </h1>
         <script src="https://cdn.jsdelivr.net/npm/web3@1.2.8/dist/web3.js"></script>
     <script>	
 	
@@ -146,7 +146,7 @@
         </script>
 
        
-        <h2 class="h2">Register Hospital</h2>
+        <h2 style="font-family:verdana;">Register Hospital</h2>
     <form>
 		<table style="width:25%"> 
             <tr>
