--- a/patient_details.html
+++ b/patient_details.html
@@ -33,7 +33,7 @@
 		// Legacy DApp browsers
 		else if (window.web3) {
 			//window.web3 = new Web3(web3.currentProvider);
-			window.web3 = new Web3(new Web3.providers.HttpProvider("https://ropsten.infura.io/v3/3b58840e0a3243e599200ccab6a3db0e)); 
+			window.web3 = new Web3(new Web3.providers.HttpProvider("https://ropsten.infura.io/v3/3b58840e0a3243e599200ccab6a3db0e")); 
 			}
 		// Non-DApp browsers
 		else {
