--- a/hospital_details.html
+++ b/hospital_details.html
@@ -149,24 +149,24 @@
         }
         </script>
 
-        <h3>Hospital Details:</h3>
+        <h3>Информация об отделении:</h3>
         <form>
 		<table style="width:25%">
 		  <tr>
-			<td>Enter Hospital Id:</td>
+			<td>Введите идентификатор отделения:</td>
 			<td><input type="text" id="tid" name="tid"></td>
 		  </tr>
 		  <tr><td><input type="button" onclick="show_details()" value="Get Details"></td></tr>
             <tr>
-			<td> Hospital Name:</td>
+			<td>Наименование отделения:</td>
 			<td><div id="get_name"></div></td>
 		  </tr>
 		  <tr>
-			<td>Hospital Address:</td>
+			<td>Адресс отделения:</td>
 			<td><div id="get_addr"></div></td>
 		  </tr>
 		  <tr>
-			<td>Hospital Specification:</td>
+			<td>Спецификация отделения:</td>
 			<td><div id="get_spec"></div></td>
 		  </tr>
 		</table>
