--- a/hospital.html
+++ b/hospital.html
@@ -4,6 +4,10 @@
 <title>Register Hospital</title>
 </head>
     <body>
+	<div class="header">
+		<h1>Header</h1>
+		<p>My supercool header</p>
+	</div>
 	<p><a href="doctor.html"><button type="submit" class="hidden" style='margin-right:16px'>Doctor Registration</button></a><a href="patient.html"><button type="submit" class="hidden" style='margin-right:16px'>Patient Registration</button></a><a href="patient_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Patient Details</button></a><a href="record_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Medical Record</button></a><a href="examine_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Patient Examine details</button></a></p>
       
         <h1 style="font-family:verdana;">Hospital Registration </h1>
@@ -146,23 +150,23 @@
         </script>
 
        
-        <h2 style="font-family:verdana;">Register Hospital</h2>
+        <h2 style="font-family:verdana;">Регистрация отделения</h2>
     <form>
 		<table style="width:25%"> 
             <tr>
-			<td>Enter Hospital Id:</td>
+			<td>Идентификатор отделения:</td>
 			<td><input type="text" id="id1" name="id1"></td>
 		  </tr>
             <tr>
-			<td> Hospital Name:</td>
+			<td>Наименование отделения:</td>
 			<td><input type="text" id="name1" name="name1"></td>
 		  </tr>
             <tr>
-			<td>Hospital Address:</td>
+			<td>Адресс отделения:</td>
 			<td><input type="text" id="addr" name="addr"></td>
 		  </tr>
             <tr>
-			<td>Hospital Specification:</td>
+			<td>Спецификация отделения:</td>
 			<td><input type="text" id="spec" name="spec"></td>
 		  </tr>
 		  <tr>
@@ -171,6 +175,6 @@
 		</table>
 		
 	</form>
-        <h3>To get details of a hospital  <a href="hospital_details.html">Click Here</a></h3>
+        <h3>Чтобы посмотреть информацию об отдлении<a href="hospital_details.html">Нажмите здесь</a></h3>
     </body>
 </html>
