Новое название полей

--- a/doctor.html
+++ b/doctor.html
@@ -1,10 +1,16 @@
 <link rel="stylesheet" type="text/css" href="https://necromyhan.github.io/medical-data-storage/style.css">
 <html>
 <head>
-<title>Register Doctor </title>
+<title>Регистрация врача</title>
 </head>
     <body>
-	<p><a href="hospital.html"><button type="submit" class="hidden" style='margin-right:16px'>Hospital Registration</button></a><a href="patient.html"><button type="submit" class="hidden" style='margin-right:16px'>Patient Registration</button></a><a href="patient_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Patient Details</button></a><a href="record_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Medical Record</button></a><a href="examine_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Patient Examine details</button></a></p>
+		
+	<div class="header">
+		<h1>Цифровое хранилище медицинских данных на базе блокчейн</h1>
+		<p>Диагностический центр №1</p>
+	</div>
+	
+	<p><a href="hospital.html"><button type="submit" class="hidden" style='margin-right:16px'>Регистрация отделения </button></a><a href="patient.html"><button type="submit" class="hidden" style='margin-right:16px'>Регистрация пациента</button></a><a href="patient_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Просмотр информации о пацинете</button></a><a href="record_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Просмотр записей пациентов</button></a><a href="examine_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Результаты обследования </button></a></p>
       
         <h1>Регистрация врача</h1>
         <script src="https://cdn.jsdelivr.net/npm/web3@1.2.8/dist/web3.js"></script>
@@ -175,11 +181,11 @@
 		  </tr>
            
 		  <tr>
-		  <td><input type="button" onclick="add_details()" value="Register"></td>
+		  <td><input type="button" onclick="add_details()" value="Регистрация"></td>
 		  </tr>
 		</table>
 		
 	</form>
-        <h3>Чтобы посмотреть информацию о врачах<a href="doctor_details.html">Нажмите здесь</a></h3>
+        <h3>Чтобы посмотреть информацию о врачах <a href="doctor_details.html">нажмите здесь</a></h3>
     </body>
 </html>
