--- a/hospital.html
+++ b/hospital.html
@@ -1,16 +1,16 @@
 <link rel="stylesheet" type="text/css" href="https://necromyhan.github.io/medical-data-storage/style.css">
 <html>
 <head>
-<title>Register Hospital</title>
+<title>Регистрация </title>
 </head>
     <body>
-	
+		
 	<div class="header">
-		<h1>Header</h1>
-		<p>My supercool header</p>
+		<h1>Цифровое хранилище медицинских данных на базе блокчейн</h1>
+		<p>Диагностический центр №1</p>
 	</div>
 	
-	<p><a href="doctor.html"><button type="submit" class="hidden" style='margin-right:16px'>Doctor Registration</button></a><a href="patient.html"><button type="submit" class="hidden" style='margin-right:16px'>Patient Registration</button></a><a href="patient_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Patient Details</button></a><a href="record_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Medical Record</button></a><a href="examine_details.html"><button type="submit" class="hidden" style='margin-right:16px'>View Patient Examine details</button></a></p>
+	<p><a href="doctor.html"><button type="submit" class="hidden" style='margin-right:16px'>Регистрация врача</button></a><a href="patient.html"><button type="submit" class="hidden" style='margin-right:16px'>Регистрация пациента</button></a><a href="patient_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Просмотр информации о пациентах</button></a><a href="record_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Просмотр записей пациентов</button></a><a href="examine_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Результаты обследования</button></a></p>
       
         <h1 style="font-family:verdana;">Hospital Registration </h1>
         <script src="https://cdn.jsdelivr.net/npm/web3@1.2.8/dist/web3.js"></script>
@@ -177,6 +177,6 @@
 		</table>
 		
 	</form>
-        <h3>Чтобы посмотреть информацию об отдлении<a href="hospital_details.html">Нажмите здесь</a></h3>
+        <h3>Чтобы посмотреть информацию об отдлении <a href="hospital_details.html">нажмите здесь</a></h3>
     </body>
 </html>
