--- a/patient_details.html
+++ b/patient_details.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="https://necromyhan.github.io/medical-data-storage/style.css">
 <html>
 <head>
-<title>Patient Details</title>
+<title>Информация о пациенте</title>
 </head>
     <body>
 			
