--- a/hospital.html
+++ b/hospital.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="https://necromyhan.github.io/medical-data-storage/style.css">
 <html>
 <head>
-<title>Регистрация </title>
+<title>Регистрация отделения</title>
 </head>
     <body>
 		
@@ -12,7 +12,7 @@
 	
 	<p><a href="doctor.html"><button type="submit" class="hidden" style='margin-right:16px'>Регистрация врача</button></a><a href="patient.html"><button type="submit" class="hidden" style='margin-right:16px'>Регистрация пациента</button></a><a href="patient_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Просмотр информации о пациентах</button></a><a href="record_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Просмотр записей пациентов</button></a><a href="examine_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Результаты обследования</button></a></p>
       
-        <h1 style="font-family:verdana;">Hospital Registration </h1>
+        <h1 style="font-family:verdana;">Регистрация отделения </h1>
         <script src="https://cdn.jsdelivr.net/npm/web3@1.2.8/dist/web3.js"></script>
     <script>	
 	
