--- a/hospital.html
+++ b/hospital.html
@@ -10,9 +10,8 @@
 		<p>Диагностический центр №1</p>
 	</div>
 	
-	<p><a href="doctor.html"><button type="submit" class="hidden" style='margin-right:16px'>Регистрация врача</button></a><a href="patient.html"><button type="submit" class="hidden" style='margin-right:16px'>Регистрация пациента</button></a><a href="patient_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Просмотр информации о пациентах</button></a><a href="record_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Просмотр записей пациентов</button></a><a href="examine_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Результаты обследования</button></a></p>
+	<p class="navig"><a href="doctor.html"><button type="submit" class="hidden" style='margin-right:16px'>Регистрация врача</button></a><a href="patient.html"><button type="submit" class="hidden" style='margin-right:16px'>Регистрация пациента</button></a><a href="patient_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Просмотр информации о пациентах</button></a><a href="record_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Просмотр записей пациентов</button></a><a href="examine_details.html"><button type="submit" class="hidden" style='margin-right:16px'>Результаты обследования</button></a></p>
       
-        <h1 style="font-family:verdana;">Регистрация отделения </h1>
         <script src="https://cdn.jsdelivr.net/npm/web3@1.2.8/dist/web3.js"></script>
     <script>	
 	
@@ -172,7 +171,7 @@
 			<td><input type="text" id="spec" name="spec"></td>
 		  </tr>
 		  <tr>
-		  <td><input type="button" onclick="add_details()" value="Register"></td>
+		  <td><input type="button" onclick="add_details()" value="Регистрация"></td>
 		  </tr>
 		</table>
 		
