--- a/hospital.html
+++ b/hospital.html
@@ -176,6 +176,6 @@
 		</table>
 		
 	</form>
-        <h3>Чтобы посмотреть информацию об отдлении <a href="hospital_details.html">нажмите здесь</a></h3>
+        <h3>Чтобы посмотреть информацию об отделении <a href="hospital_details.html">нажмите здесь</a></h3>
     </body>
 </html>
