--- a/patient_details.html
+++ b/patient_details.html
@@ -277,7 +277,7 @@
 		  
 		 <tr><td><input type="button" onclick="get_details()" value="Получить информацию"></td></tr>
 		 
-        <h3>Информаци о пациенте</h3>
+        <h3>Информация о пациенте</h3>
         <form>
 		<table style="width:25%">
 		
