--- a/patient_details.html
+++ b/patient_details.html
@@ -341,5 +341,12 @@
 		  
 		</table>
         </form>  
+		
+			<footer>
+		<div id="foot">
+			НИУ МИЭТ Москва, 2021
+		</div>
+	</footer>
+		
     </body>
 </html>
