--- a/doctor.html
+++ b/doctor.html
@@ -187,5 +187,12 @@
 		
 	</form>
         <h3>Чтобы посмотреть информацию о врачах <a href="doctor_details.html">нажмите здесь</a></h3>
+		
+			<footer>
+		<div id="foot">
+			НИУ МИЭТ Москва, 2021
+		</div>
+	</footer>
+	
     </body>
 </html>
