--- a/doctor_details.html
+++ b/doctor_details.html
@@ -184,5 +184,12 @@
 		  </tr>
 		</table>
         </form>  
+		
+			<footer>
+		<div id="foot">
+			НИУ МИЭТ Москва, 2021
+		</div>
+	</footer>
+	
     </body>
 </html>
