--- a/examine_details.html
+++ b/examine_details.html
@@ -998,5 +998,11 @@
 		  </table>
 	</form>
 	
+		<footer>
+		<div id="foot">
+			НИУ МИЭТ Москва, 2021
+		</div>
+	</footer>
+	
     </body>
 </html>
