--- a/hospital.html
+++ b/hospital.html
@@ -177,5 +177,12 @@
 		
 	</form>
         <h3>Чтобы посмотреть информацию об отделении <a href="hospital_details.html">нажмите здесь</a></h3>
+		
+			<footer>
+		<div id="foot">
+			НИУ МИЭТ Москва, 2021
+		</div>
+	</footer>
+		
     </body>
 </html>
