--- a/hospital_details.html
+++ b/hospital_details.html
@@ -177,5 +177,12 @@
 		  </tr>
 		</table>
         </form>  
+		
+			<footer>
+		<div id="foot">
+			НИУ МИЭТ Москва, 2021
+		</div>
+	</footer>
+		
     </body>
 </html>
