--- a/patient.html
+++ b/patient.html
@@ -346,5 +346,12 @@
 		
 	
         <h3>Чтобы посмотреть информацию о пациенте <a href="patient_details.html">нажмите здесь</a></h3>
+		
+			<footer>
+		<div id="foot">
+			НИУ МИЭТ Москва, 2021
+		</div>
+	</footer>
+		
     </body>
 </html>
