--- a/patient_examine.html
+++ b/patient_examine.html
@@ -1016,5 +1016,12 @@
 		
 		<h4>Идентификатор транзакции: <a href=""><div id="result"></div></a></h4> 
 	</form>
+	
+		<footer>
+		<div id="foot">
+			НИУ МИЭТ Москва, 2021
+		</div>
+	</footer>
+	
     </body>
 </html>
