--- a/record.html
+++ b/record.html
@@ -1092,5 +1092,12 @@
 		  </table>
 		
 	</form>
+	
+		<footer>
+		<div id="foot">
+			НИУ МИЭТ Москва, 2021
+		</div>
+	</footer>
+	
     </body>
 </html>
