--- a/record_details.html
+++ b/record_details.html
@@ -1077,5 +1077,12 @@
 		  </tr>		  
 		</table>
 	</form>
+	
+		<footer>
+		<div id="foot">
+			НИУ МИЭТ Москва, 2021
+		</div>
+	</footer>
+	
     </body>
 </html>
