--- a/patient.html
+++ b/patient.html
@@ -347,6 +347,8 @@
 	
         <h3>Чтобы посмотреть информацию о пациенте <a href="patient_details.html">нажмите здесь</a></h3>
 		
+		 <h3>Запросить разрешение на использование данных пациента <a href="request.html" target="_blank">нажмите здесь</a></h3>
+		
 			<footer>
 		<div id="foot">
 			НИУ МИЭТ Москва, 2021
