--- a/request.html
+++ b/request.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="https://necromyhan.github.io/medical-data-storage/style.css">
 <html>
 <head>
-<title>Регистрация отделения</title>
+<title>Запрос согласия пациента</title>
 </head>
     <body>
 		
@@ -151,7 +151,7 @@
         </script>
 
        
-        <h2 style="font-family:verdana;">Регистрация отделения</h2>
+        <h2 class="requesth" style="font-family:verdana;">Регистрация отделения</h2>
     <form>
 		<table style="width:25%"> 
             <tr>
