--- a/patient.html
+++ b/patient.html
@@ -345,9 +345,12 @@
 		</form>
 		
 	
-        <h3>Чтобы посмотреть информацию о пациенте <a href="patient_details.html">нажмите здесь</a></h3>
-		
+
+		 <h3>Пациент еще не дал согласие на обработку данных </a></h3>
 		 <h3>Запросить разрешение на использование данных пациента <a href="request.html" target="_blank">нажмите здесь</a></h3>
+		         
+		 <h3>Чтобы посмотреть информацию о пациенте <a href="patient_details.html">нажмите здесь</a></h3>
+				 
 		
 			<footer>
 		<div id="foot">
