--- a/request.html
+++ b/request.html
@@ -151,7 +151,7 @@
         </script>
 
        
-        <h2 class="requesth" style="font-family:verdana;">Регистрация отделения</h2>
+        <h2 class="requesth" style="font-family:verdana;">Запрос согласия пациента на обработку персоальных данных</h2>
     <form>
 		<table style="width:25%"> 
             <tr>
@@ -159,24 +159,19 @@
 			<td><input type="text" id="id1" name="id1"></td>
 		  </tr>
             <tr>
-			<td>Наименование отделения:</td>
+			<td>Идентификатор врача:</td>
 			<td><input type="text" id="name1" name="name1"></td>
 		  </tr>
-            <tr>
-			<td>Адресс отделения:</td>
-			<td><input type="text" id="addr" name="addr"></td>
-		  </tr>
-            <tr>
-			<td>Спецификация отделения:</td>
-			<td><input type="text" id="spec" name="spec"></td>
-		  </tr>
+
 		  <tr>
-		  <td><input type="button" onclick="add_details()" value="Регистрация"></td>
+		  <td><input type="button" onclick="add_details()" value="Подтвердить согласие на обработку данных"></td>
 		  </tr>
 		</table>
 		
 	</form>
-        <h3>Чтобы посмотреть информацию об отделении <a href="hospital_details.html">нажмите здесь</a></h3>
+	
+	<p>Подтверждая согласие на обработку вносимых в форму моих персональных данных
+        <h3>Чтобы посмотреть информацию о врачах <a href="doctor_details.html">нажмите здесь</a></h3>
 		
 			<footer>
 		<div id="foot">
