--- a/request.html
+++ b/request.html
@@ -170,7 +170,7 @@
 		
 	</form>
 	
-	<p>Подтверждая согласие на обработку вносимых в форму моих персональных данных
+	<p>Нажимая на кнопку, вы подтверждаете согласие на обработку диагностическим центром вносимых в форму персональных данных моих персональных данных</p>
         <h3>Чтобы посмотреть информацию о врачах <a href="doctor_details.html">нажмите здесь</a></h3>
 		
 			<footer>
